# landmarks

./: .dockerignore  Cargo.toml  backups.Dockerfile  backups.docker-compose.yml  backups.fly.toml  docker-compose.yml  fly.toml  index.html  server.Dockerfile  server.docker-compose.yml  server.fly.toml
.github/workflows/: deploy-backups.yml  deploy-frontend.yml  deploy-server.yml
assets/: index-0581c9d2.js  index-0c23a67d.css  index-0d895dc5.js  index-0f502477.js  index-0fec6ca2.js  index-0s3a2LF6.js  index-2561a579.js  index-28d84d90.js  index-3KTZUMyf.js  index-436b6653.js  index-519EaXrB.js  index-5318c0cc.js  index-58d16f59.js  index-605f71a1.js  index-6c1d843e.js  index-73bad36b.js  index-79239cc4.js  index-7bd30066.css  index-7e2f6860.js  index-8ed1f16a.js  index-99d3e1a1.js  index-BtN5aeLN.js  index-Bwe7UqjK.css  index-CHI8v41p.js  index-CHT-dSZe.js  index-CrMNQbFT.css  index-DpzdJ1m9.css  index-DxJzgoov.js  index-No2-Sdtd.css  index-_iJVkxt0.js  index-a0b9a9ea.js  index-a547b3e2.js  index-af52d354.js  index-b40bb2c7.js  index-ca907471.js  index-ce669262.js  index-ceada7f0.js  index-e113662b.js  index-f2279609.js  index-f6d884c6.js  (+4 more)
backups/: Cargo.toml
backups/src/: main.rs  save_world.rs
backups/src/config/: app_state.rs  backup_plan.rs  blob_storage.rs  mod.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs  string_visitor.rs  tag.rs
core/src/config/: neo4j.rs
core/src/landmarks/: create_landmark.rs  landmark.rs  landmark_filters.rs  link.rs  link_type.rs  mod.rs
core/src/minecraft/: biome.rs  coordinate.rs  dimension.rs  farm.rs  platform.rs  seed.rs
core/src/persistence/: landmarks.rs  minecraft.rs  mod.rs  users.rs  worlds.rs
core/src/serialization/: comma_separated_list.rs  empty_string_as_none.rs  mod.rs
core/src/users/: user.rs
core/src/worlds/: create_world.rs  metadata.rs  world.rs
frontend/: .env.development  .env.production  .eslintrc.cjs  .prettierignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  config.ts  env.d.ts  main.tsx
frontend/src/api/: CreateLandmark.ts  CreateWorld.ts  LandmarkFilters.ts  LandmarkMetadata.ts  LinkLandmarks.ts  Platform.ts  Seed.ts  ShareWorld.ts  SlimUser.ts  WorldMetadata.ts  biomes.ts  dimensions.ts  headers.ts  landmarks.ts  request.ts  users.ts  worlds.ts
frontend/src/components/: Coordinate.tsx  Dimension.tsx  LandmarkBiomes.tsx  LandmarkCard.tsx  LandmarkForm.tsx  LandmarkLinks.tsx  NumberField.tsx  TextListEditor.tsx  WorldCard.tsx  WorldForm.tsx  bullet.tsx
frontend/src/hooks/: auth.ts  landmarks.ts  minecraft.ts  users.ts  worlds.ts
frontend/src/models/: EditingCoordinate.ts  EditingLandmark.ts  EditingWorld.ts  Landmark.ts  LandmarkLink.ts  LandmarkMetadata.ts  LandmarkRecord.ts  SlimUser.ts  WorldRecord.ts
frontend/src/pages/: AddLandmark.tsx  AddWorld.tsx  AuthenticatedPage.tsx  Home.tsx  Landmark.tsx  NotSignedIn.tsx  ShareWorld.tsx  SignIn.tsx  World.tsx  index.ts
server/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
server/src/: lib.rs  main.rs  string_visitor.rs
server/src/api/handlers/: add_biome.rs  add_farm.rs  add_landmark_link.rs  add_tag.rs  headers.rs  landmarks.rs  minecraft.rs  mod.rs  remove_biome.rs  remove_farm.rs  remove_tag.rs  update_coordinate.rs  update_notes.rs  users.rs  worlds.rs
server/src/backups/: world.rs
server/src/config/: app_state.rs  backup_plan.rs  mod.rs
server/src/landmarks/: metadata.rs  mod.rs
server/src/minecraft/: biome.rs  coordinate.rs  dimension.rs  farm.rs  mod.rs  platform.rs
server/src/persistence/: minecraft.rs  mod.rs
server/src/worlds/: create_world.rs
src/: lib.rs  main.rs  tag.rs
src/api/: auth.rs
src/api/handlers/: add_tag.rs  headers.rs  landmarks.rs  minecraft.rs  mod.rs  remove_biome.rs  remove_tag.rs  update_coordinate.rs  worlds.rs
src/config/: app_state.rs  auth.rs  mod.rs  neo4j.rs
src/landmarks/: create_landmark.rs  landmark.rs  metadata.rs  mod.rs
src/minecraft/: biome.rs  coordinate.rs  dimension.rs  platform.rs
src/persistence/: landmarks.rs  minecraft.rs  mod.rs  worlds.rs
src/worlds/: create_world.rs  metadata.rs  mod.rs  world.rs
