[package]
name = "landmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum.git", branch = "main" }
neo4rs = { git = "https://github.com/neo4j-labs/neo4rs.git", rev = "29129fd32f1b9d90748fd3a3d7aa69278eb70d86" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
strum = "0.24"
strum_macros = "0.24"
tokio = { version = "1.28", features = ["full"] }
