[package]
name = "landmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { git = "https://github.com/tokio-rs/axum.git", branch = "main" }
neo4rs = { git = "https://github.com/neo4j-labs/neo4rs.git", rev = "29129fd32f1b9d90748fd3a3d7aa69278eb70d86" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
strum = "0.25"
strum_macros = "0.25"
time = "0.2.23"
tokio = { version = "1.28", features = ["full"] }
tower-http = { version = "0.4.1", features = ["cors"] }
uuid = { version = "1.3.4", features = ["v4", "serde", "fast-rng"] }
