[package]
name = "backups"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aws-config = "0.56"
aws-sdk-s3 = "0.30"
chrono = { version = "0.4", features = ["serde"] }
landmarks_core = { path = "../core" }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
uuid = { version = "1.4", features = ["v4", "serde", "fast-rng"] }
