[package]
name = "backups"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aws-config = { version = "1.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.4"
landmarks_core = { path = "../core" }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.34", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde", "fast-rng"] }
