[package]
name = "landmarks_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neo4rs = { git = "https://github.com/neo4j-labs/neo4rs.git", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0"
uuid = { version = "1.8", features = ["v4", "serde", "fast-rng"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }

[dev-dependencies]
serde_json = "1.0"
